# cool-login-banner

./: README.rst  cool_wm.py  main.py  pyproject.toml
cool-wm/: cool_wm.py  executors.py
cool_login_banner/: __init__.py  banner_setter.py  cool_login_banner.py  cool_wm.py  engines.py
cool_wm/: cool_wm.py  executors.py
test/: main.py
tests/: conftest.py  main.py  test_banner_setter.py  test_engines.py
